Changement de la structure du projet et ajout de commandes pour le langage